did some work on internal

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body ng-app="ThetaXiApp">
-    <div class="header">
-    </div>
+    <div class="header"></div>
         <div ng-view></div>
     <!-- Modules -->
     <script src="js/app.js"></script>
-
+    <!-- Controllers -->
+    <script src="js/controllers/PartyController.js"></script>
+    <!-- Services -->
+    <script src="js/services/parties.js"></script>
   </body>
 </html>
