--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/app.js"></script>
     <!-- Controllers -->
     <script src="js/controllers/PartyController.js"></script>
+    <script src="js/controllers/PartyInfoController.js"></script>
     <!-- Services -->
     <script src="js/services/parties.js"></script>
   </body>
