--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/angular.js"></script>
     <script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/ui-bootstrap.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/yeti.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
