fixed modal data

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <script src="js/controllers/PartyInfoController.js"></script>
     <!-- Services -->
     <script src="js/services/parties.js"></script>
+    <!-- Derectives -->
+    <script src="js/derectives/fileread.js"></script>
   </body>
 </html>
