did login,comments,and fixed some style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="js/angular.js"></script>
     <script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
     <script type="text/javascript" src="js/ui-bootstrap.js"></script>
+    <script src="//www.parsecdn.com/js/parse-1.5.0.min.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/yeti.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
@@ -16,8 +17,10 @@
     <!-- Controllers -->
     <script src="js/controllers/PartyController.js"></script>
     <script src="js/controllers/PartyInfoController.js"></script>
+    <script src="js/controllers/LoginController.js"></script>
     <!-- Services -->
     <script src="js/services/parties.js"></script>
+    <script src="js/services/comments.js"></script>
     <!-- Derectives -->
     <script src="js/derectives/fileread.js"></script>
   </body>
